--- a/src/app/components/adddepot/adddepot.component.html
+++ b/src/app/components/adddepot/adddepot.component.html
@@ -1,1 +1,17 @@
-<p>adddepot works!</p>
+<form action [formGroup]="formadddepot" >
+    <div class="form-group">
+       <label for="">Montant</label>
+       <input type="number" formControlName="montantdepot" class="form-control" placeholder="Montant depot">
+     </div>
+   
+
+       <div class="form-group">
+        <label for="">Compte</label>
+        <select class="form-control"  formControlName="compte"> 
+          <option  *ngFor="let compte of comptes" value="/api/comptes/{{ compte.id }}"> {{compte.numerocompte}}</option>
+        </select> 
+
+        </div>
+
+         <button type="submit" (click)="onAdddepot()" class="btn btn-primary"> Enregistrer </button> 
+   </form>
