--- a/src/app/components/addaffectation/addaffectation.component.html
+++ b/src/app/components/addaffectation/addaffectation.component.html
@@ -1,4 +1,4 @@
-<form action [formGroup]="formaddaffectation" >
+<form action [formGroup]="formaddaffectation" style= "margin-left: 270px;background-color: #999999;">
  
    
      <div class="form-group">
