--- a/src/app/components/addcompte/addcompte.component.html
+++ b/src/app/components/addcompte/addcompte.component.html
@@ -1,5 +1,5 @@
 
-  <form [formGroup]="formaddcompte">
+  <form [formGroup]="formaddcompte" style= "margin-left: 270px;background-color: #99caca;">
     <div class="form-group">
         <label for="">Montant depot</label>
         <input type="number" formControlName="montantdepot" class="form-control" placeholder="montantdepot" id="montantdepot">
