--- a/src/app/components/adddepot/adddepot.component.html
+++ b/src/app/components/adddepot/adddepot.component.html
@@ -1,4 +1,4 @@
-<form action [formGroup]="formadddepot" >
+<form action [formGroup]="formadddepot" style= "margin-left: 270px;background-color: #999999;">
     <div class="form-group">
        <label for="">Montant</label>
        <input type="number" formControlName="montantdepot" class="form-control" placeholder="Montant depot">
