--- a/src/app/components/addretrait/addretrait.component.html
+++ b/src/app/components/addretrait/addretrait.component.html
@@ -1,4 +1,4 @@
-<form action [formGroup]="formaddretrait" >
+<form action [formGroup]="formaddretrait" style= "margin-left: 270px;background-color: #3818c7;">
 
 
     <div class="form-group">
