--- a/src/app/components/addtransaction/addtransaction.component.html
+++ b/src/app/components/addtransaction/addtransaction.component.html
@@ -1,4 +1,4 @@
-<form action [formGroup]="formaddenvoi" >
+<form action [formGroup]="formaddenvoi" style= "margin-left: 270px;background-color: #999999;">
 
     <div class="form-group">
        <label for="">Montant envoi</label>
