--- a/src/app/components/getcompte/getcompte.component.html
+++ b/src/app/components/getcompte/getcompte.component.html
@@ -1,5 +1,5 @@
 <button type="button" class="btn btn-success" (click)="ongetListecompte()">affichage compte</button>
-<div class="container">
+<div class="container" style="margin-left: 270px;">
     <h4>LISTE DES COMPTE</h4>
                
     <table class="table table-dark">
