--- a/src/app/components/getrole/getrole.component.html
+++ b/src/app/components/getrole/getrole.component.html
@@ -1,6 +1,6 @@
 
 <button type="button" class="btn btn-success" (click)="ongetRoles()">affichage role</button>
-<div class="container">
+<div class="container" style="margin-left: 270px;">
     <h4>LISTE DES ROLES</h4>
                
     <table class="table table-dark">
