--- a/src/app/components/getuser/getuser.component.html
+++ b/src/app/components/getuser/getuser.component.html
@@ -1,6 +1,6 @@
 
 <button type="button" class="btn btn-success" (click)="ongetListeusers()">affichage user</button>
-<div class="container">
+<div class="container" style="margin-left: 270px;">
     <h4>LISTE DES USERS</h4>
                
     <table class="table table-dark">
