--- a/src/app/components/listtransaction/listtransaction.component.html
+++ b/src/app/components/listtransaction/listtransaction.component.html
@@ -1,5 +1,5 @@
 <button type="button" class="btn btn-success" (click)="ongetListetransaction()">affichage transaction</button>
-<div class="container">
+<div class="container" style="margin-left: 270px;">
     <h4>LISTE DES TRANSACTIONS</h4>
                
     <table class="table table-dark">
