--- a/src/app/components/listtransaction/listtransaction.component.html
+++ b/src/app/components/listtransaction/listtransaction.component.html
@@ -1,7 +1,21 @@
-<button type="button" class="btn btn-success" (click)="ongetListetransaction()">affichage transaction</button>
+<form action [formGroup]="formaddrecherche" style= "margin-left: 1000px;  background-color: #2cc718;">
+  <div class="form-group">
+    <label for="">RECHERCHER ICI PAR DATE</label>
+    <input type="date" formControlName="datetrans" class="form-control" >
+  </div>
+</form>
+
+
+
+
 <div class="container" style="margin-left: 270px;">
-    <h4>LISTE DES TRANSACTIONS</h4>
-               
+
+  <div class="search" style="margin-right: 500px;">
+    <input class="form-control" type="text" placeholder="Search by Term..." name="search"  [(ngModel)]="rechercheUser"> 
+  </div>
+
+    <button type="button" class="btn btn-success" (click)="ongetListetransaction()">AFFICHAGE LISTE DES TRANSACTIONS</button>
+
     <table class="table table-dark">
       <thead>
         <tr>
@@ -18,7 +32,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let trans of transactions">
+        <tr *ngFor="let trans of transactions  | filter:rechercheUser">
 
             <td>{{trans.id}}</td>
             <td>{{trans.userenvoi.username}}</td>
